# iot-final

./: .gitattributes  README.md  client.py  pyproject.toml  server.py  split_schema.proto  split_schema_pb2.py  split_schema_pb2.pyi  split_schema_pb2_grpc.py  teste.py  yolo8_modules.py
models/head/l/: head_weights_a.pt  head_weights_b.pt  head_weights_c.pt
models/head/m/: head_weights_a.pt  head_weights_b.pt  head_weights_c.pt
models/head/n/: head_weights_a.pt  head_weights_b.pt  head_weights_c.pt
models/head/s/: head_weights_a.pt  head_weights_b.pt  head_weights_c.pt
models/head/x/: head_weights_a.pt  head_weights_b.pt  head_weights_c.pt
models/tail/l/: tail_weights_a.pt  tail_weights_b.pt  tail_weights_c.pt
models/tail/m/: tail_weights_a.pt  tail_weights_b.pt  tail_weights_c.pt
models/tail/n/: tail_weights_a.pt  tail_weights_b.pt  tail_weights_c.pt
models/tail/s/: tail_weights_a.pt  tail_weights_b.pt  tail_weights_c.pt
models/tail/x/: tail_weights_a.pt  tail_weights_b.pt  tail_weights_c.pt
